<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/neartagtheme"
    android:focusable="true"
    android:clickable="true"
    android:orientation="vertical">

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/loading_channel_token_fetch_profile"
        style="@style/SpinKitView.Large.Wave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:visibility="invisible"
        app:SpinKit_Color="@color/Grey" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/follower"
        android:layout_marginStart="4dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/follower"
        android:text="@string/followers"
        android:textColor="@color/follower_blue"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/following"
        android:layout_alignBottom="@+id/following"
        android:layout_marginStart="4dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/following"
        android:text="@string/following"
        android:textColor="@color/follower_blue"
        android:textSize="18sp" />


    <ImageView
        android:id="@+id/prev_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24sp"
        android:layout_marginTop="58dp"
        android:src="@drawable/left_move_button" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_img"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@+id/prev_button2"
        android:layout_alignStart="@+id/prev_button2"
        android:layout_marginStart="2dp"
        android:layout_marginTop="26dp"
        app:srcCompat="@drawable/empty_user_profile_image" />

    <TextView
        android:id="@+id/name_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_img"
        android:layout_alignStart="@+id/profile_img"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20sp"
        android:text="TextView"
        android:textColor="@color/Black"
        android:textSize="21sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_user"
        android:layout_alignStart="@+id/name_user"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="0dp"
        android:textColor="@color/Black"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_alignStart="@+id/username"
        android:layout_marginStart="0dp"
        android:layout_marginTop="24dp"
        android:textColor="@color/Black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_alignBottom="@+id/follower"
        android:layout_marginStart="25dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/textView12"
        android:textColor="@color/Black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/user_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/follower"
        android:layout_alignStart="@+id/follower"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="36dp"
        android:textColor="@color/Black"
        android:textSize="16sp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_img_noti"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@+id/user_bio"
        android:layout_alignStart="@+id/user_bio"
        android:layout_marginStart="0dp"
        android:layout_marginTop="45dp"
        app:srcCompat="@drawable/empty_user_profile_image" />

    <TextView
        android:id="@+id/nominated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/profile_img_noti"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="2dp"
        android:layout_toEndOf="@+id/profile_img_noti"
        android:text="@string/nominated"
        android:textColor="@color/Black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/nominated2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/nominated"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/nominated"
        android:textColor="@color/Black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/joined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/profile_img_noti"
        android:layout_marginStart="20dp"
        android:layout_marginTop="2dp"
        android:textColor="@color/Black"
        android:layout_toEndOf="@+id/profile_img_noti"
        android:textSize="14sp" />

</RelativeLayout>
